--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+		Ubuntu, Cantarell, Fira Sans, Droid Sans;
 }
 
 * {
@@ -141,7 +141,30 @@ body {
 	transform-style: preserve-3d;
 	border-radius: 50%;
 	transition: width 2s, height 2s;
-	border: 0.5px dashed rgb(97, 97, 97);
+}
+.earth-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.venus-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.mercury-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.mars-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.jupiter-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.saturn-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.uranus-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
+}
+.neptun-orbit:hover {
+	border: 0.5px solid rgb(255, 255, 255);
 }
 .mercury-orbit {
 	position: absolute;
@@ -150,6 +173,7 @@ body {
 	transform: rotateZ(-224deg);
 	transition-delay: 0s;
 	z-index: 9;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .mercury-orbit {
 	width: 12.5%;
@@ -163,6 +187,7 @@ body {
 	transform: rotateZ(-144deg);
 	transition-delay: 0.1s;
 	z-index: 8;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .venus-orbit {
 	width: 25%;
@@ -176,6 +201,7 @@ body {
 	transform: rotateZ(-101deg);
 	transition-delay: 0.2s;
 	z-index: 7;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .earth-orbit {
 	width: 37.5%;
@@ -189,6 +215,7 @@ body {
 	transform: rotateZ(-39deg);
 	transition-delay: 0.3s;
 	z-index: 6;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .mars-orbit {
 	width: 50%;
@@ -204,6 +231,7 @@ body {
 	transform: rotateZ(-245deg);
 	transition-delay: 0.4s;
 	z-index: 5;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .jupiter-orbit {
 	width: 62.5%;
@@ -217,6 +245,7 @@ body {
 	transform: rotateZ(-282deg);
 	transition-delay: 0.5s;
 	z-index: 4;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .saturn-orbit {
 	width: 75%;
@@ -230,6 +259,7 @@ body {
 	transform: rotateZ(-29deg);
 	transition-delay: 0.6s;
 	z-index: 3;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 #ideal-orbit-size:checked ~ .universe .uranus-orbit {
 	width: 87.5%;
@@ -242,6 +272,7 @@ body {
 	height: 100%;
 	transform: rotateZ(-347deg);
 	z-index: 2;
+	border: 0.5px dashed rgb(97, 97, 97);
 }
 .orbit__visual {
 	position: absolute;
@@ -604,28 +635,28 @@ body {
 }
 
 // Size solar
-.size-solar-big{
+.size-solar-big {
 	width: 130px;
 	height: 130px;
 }
-.size-solar-small{
+.size-solar-small {
 	width: 70px;
 	height: 70px;
 }
 
 // position solar
-.position-solar-6{
+.position-solar-6 {
 	top: -45px;
 }
-.position-solar-5{
+.position-solar-5 {
 	top: -20px;
 }
-.position-solar-3{
+.position-solar-3 {
 	top: -15px;
 }
-.position-solar-2{
+.position-solar-2 {
 	top: -40px;
 }
-.position-solar-1{
+.position-solar-1 {
 	top: -25px;
 }
