--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	animation: animation_opacity 2s ease-in-out;
 	.background {
 		width: 100%;
 		height: 100vh;
@@ -27,6 +28,16 @@
 			}
 		}
 	}
+	@keyframes animation_opacity {
+		0% {
+			opacity: 0.1;
+			transform: scale(2);
+		}
+		100% {
+			opacity: 1;
+			transform: scale(1);
+		}
+	}
 	h1 {
 		z-index: 1;
 		position: absolute;
@@ -40,6 +51,42 @@
 		cursor: pointer;
 		&:hover {
 			color: #ff0000;
+		}
+	}
+	.box_hover_line {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background-color: aliceblue;
+		z-index: 1;
+		.hover_line {
+			width: 400px;
+			height: 400px;
+			span {
+				color: #262626;
+				font-size: 3rem;
+				margin: auto;
+				cursor: pointer;
+			}
+			.line {
+				width: 1px;
+				transform: rotate(-45deg);
+				background-color: #ff0000;
+				height: 5px;
+			}
+		}
+		&:hover {
+			.hover_line {
+				span {
+					color: #ff0000;
+				}
+				.line {
+					border-radius: 10px;
+					transform: rotate(-45deg) scaleX(100);
+					transition: 0.5s;
+				}
+			}
 		}
 	}
 }
