--- a/pages/home-aura/Home-aura.module.scss
+++ b/pages/home-aura/Home-aura.module.scss
@@ -1,4 +1,4 @@
-.home_theanh {
+.home_aura {
 	background-color: #262626;
 	color: white;
 	text-align: center;
@@ -21,6 +21,25 @@
 			}
 			100% {
 				transform: scale(1);
+			}
+		}
+	}
+	.background_speed {
+		width: 100%;
+		height: 100vh;
+		background-image: url(../../public/images/background2.jpg);
+		background-size: cover;
+		animation: backgroundAnimation_speed 3s ease-in-out;
+		// animation cho background
+		@keyframes backgroundAnimation_speed {
+			0% {
+				transform: scale(1);
+			}
+			45% {
+				transform: scale(1);
+			}
+			100% {
+				transform: scale(2.5);
 			}
 		}
 	}
