--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -282,6 +282,27 @@ body {
 	transition-delay: 0.2s;
 	z-index: 7;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_earth-orbit 4s;
+}
+@keyframes border_white_earth-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	65% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	75% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	85% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	95% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	100% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
 }
 #ideal-orbit-size:checked ~ .universe .earth-orbit {
 	width: 37.5%;
@@ -296,6 +317,27 @@ body {
 	transition-delay: 0.3s;
 	z-index: 6;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_mars-orbit 4s;
+}
+@keyframes border_white_mars-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	75% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	80% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	85% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	95% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	100% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
 }
 #ideal-orbit-size:checked ~ .universe .mars-orbit {
 	width: 50%;
@@ -312,6 +354,21 @@ body {
 	transition-delay: 0.4s;
 	z-index: 5;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_jupiter-orbit 4s;
+}
+@keyframes border_white_jupiter-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	80% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	85% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	100% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
 }
 #ideal-orbit-size:checked ~ .universe .jupiter-orbit {
 	width: 62.5%;
@@ -326,6 +383,21 @@ body {
 	transition-delay: 0.5s;
 	z-index: 4;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_saturn-orbit 4s;
+}
+@keyframes border_white_saturn-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	85% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	90% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	100% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
 }
 #ideal-orbit-size:checked ~ .universe .saturn-orbit {
 	width: 75%;
@@ -340,6 +412,21 @@ body {
 	transition-delay: 0.6s;
 	z-index: 3;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_uranus-orbit 4s;
+}
+@keyframes border_white_uranus-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	90% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	95% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
+	100% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
 }
 #ideal-orbit-size:checked ~ .universe .uranus-orbit {
 	width: 87.5%;
@@ -353,6 +440,18 @@ body {
 	transform: rotateZ(-347deg);
 	z-index: 2;
 	border: 0.5px dashed rgb(97, 97, 97);
+	animation: border_white_neptun-orbit 4s;
+}
+@keyframes border_white_neptun-orbit {
+	0% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	95% {
+		border: 0.5px dashed rgb(97, 97, 97);
+	}
+	100% {
+		border: 0.5px dashed rgb(255, 255, 255);
+	}
 }
 .orbit__visual {
 	position: absolute;
