--- a/pages/home-aura/Home-aura.module.scss
+++ b/pages/home-aura/Home-aura.module.scss
@@ -1,82 +1,4 @@
-.home_aura {
-	background-color: #262626;
-	color: white;
+.home {
+	margin: 0 auto;
 	text-align: center;
-	height: 100vh;
-	// max-width: 1408px;
-	width: 100%;
-	.background {
-		width: 100%;
-		height: 100vh;
-		background-image: url(../../public/images/background2.jpg);
-		background-size: cover;
-		animation: backgroundAnimation 30s infinite;
-		// animation cho background
-		@keyframes backgroundAnimation {
-			0% {
-				transform: scale(1);
-			}
-			50% {
-				transform: scale(1.1);
-			}
-			100% {
-				transform: scale(1);
-			}
-		}
-	}
-	.background_speed {
-		width: 100%;
-		height: 100vh;
-		background-image: url(../../public/images/background2.jpg);
-		background-size: cover;
-		animation: backgroundAnimation_speed 3s ease-in-out;
-		// animation cho background
-		@keyframes backgroundAnimation_speed {
-			0% {
-				transform: scale(1);
-			}
-			45% {
-				transform: scale(1);
-			}
-			100% {
-				transform: scale(2.5);
-			}
-		}
-	}
-	.hover_solar {
-		transition: 0.5s color ease;
-		cursor: pointer;
-		&:hover {
-			animation: sunAnimation 5s infinite;
-			@keyframes sunAnimation {
-				0% {
-					transform: scale(1);
-				}
-				50% {
-					transform: scale(1.5);
-				}
-				100% {
-					transform: scale(1);
-				}
-			}
-		}
-	}
-	.hover_sun {
-		transition: 0.5s color ease;
-		cursor: pointer;
-		&:hover {
-			animation: sunAnimation 5s infinite;
-			@keyframes sunAnimation {
-				0% {
-					transform: scale(1);
-				}
-				50% {
-					transform: scale(1.1);
-				}
-				100% {
-					transform: scale(1);
-				}
-			}
-		}
-	}
 }
