--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -8,7 +8,8 @@
 	.background {
 		width: 100%;
 		height: 100vh;
-		background-image: url(../../public/images/background2.jpg);
+		// background-image: url(../../public/images/background2.jpg);
+		background-color: black;
 		background-size: cover;
 		animation: backgroundAnimation 30s infinite;
 		// animation cho background
@@ -27,7 +28,8 @@
 	.background_speed {
 		width: 100%;
 		height: 100vh;
-		background-image: url(../../public/images/background2.jpg);
+		// background-image: url(../../public/images/background2.jpg);
+		background-color: black;
 		background-size: cover;
 		animation: backgroundAnimation_speed 3s ease-in-out;
 		// animation cho background
