--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -2,28 +2,27 @@
 	background-color: #262626;
 	color: white;
 	text-align: center;
-	height: 100vh;
+	height: 120vh;
 	// max-width: 1408px;
 	width: 100%;
 	.background {
 		width: 100%;
-		height: 100vh;
-		// background-image: url(../../public/images/background2.jpg);
+		height: 120vh;
 		background-color: black;
 		background-size: cover;
-		animation: backgroundAnimation 30s infinite;
-		// animation cho background
-		@keyframes backgroundAnimation {
-			0% {
-				transform: scale(1);
-			}
-			50% {
-				transform: scale(1.1);
-			}
-			100% {
-				transform: scale(1);
-			}
-		}
+		// animation: backgroundAnimation 30s infinite;
+		// // animation cho background
+		// @keyframes backgroundAnimation {
+		// 	0% {
+		// 		transform: scale(1);
+		// 	}
+		// 	50% {
+		// 		transform: scale(1.1);
+		// 	}
+		// 	100% {
+		// 		transform: scale(1);
+		// 	}
+		// }
 	}
 	.background_speed {
 		width: 100%;
@@ -80,5 +79,8 @@
 				}
 			}
 		}
+	}
+	input {
+		opacity: 0;
 	}
 }
