--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -3,8 +3,9 @@
 	color: white;
 	text-align: center;
 	height: 120vh;
-	// max-width: 1408px;
 	width: 100%;
+	max-width: 1920px;
+	margin: 0 auto;
 	.background {
 		width: 100%;
 		height: 120vh;
