--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -1,50 +1,58 @@
-.home_aura {
-	background-color: #262626;
-	color: white;
-	text-align: center;
-	height: 100vh;
-	width: 100%;
-	max-width: 1920px;
-	margin: 0 auto;
-	background-color: black;
-	overflow-x: hidden !important; 
-	.hover_solar {
-		transition: 0.5s color ease;
-		cursor: pointer;
-		&:hover {
-			animation: sunAnimation 5s infinite;
-			@keyframes sunAnimation {
-				0% {
-					transform: scale(1);
-				}
-				50% {
-					transform: scale(1.5);
-				}
-				100% {
-					transform: scale(1);
-				}
-			}
-		}
-	}
-	.hover_sun {
-		transition: 0.5s color ease;
-		cursor: pointer;
-		&:hover {
-			animation: sunAnimation 5s infinite;
-			@keyframes sunAnimation {
-				0% {
-					transform: scale(1);
-				}
-				50% {
-					transform: scale(1.1);
-				}
-				100% {
-					transform: scale(1);
+.unicornverse {
+	overflow-x: hidden !important;
+	height: fit-content;
+	// background-color: black;
+	.home_aura {
+		background-color: #262626;
+		color: white;
+		text-align: center;
+		height: 100vh;
+		width: 100%;
+		max-width: 1920px;
+		margin: 0 auto;
+		background-color: black;
+		overflow-x: hidden !important;
+		.hover_solar {
+			transition: 0.5s color ease;
+			cursor: pointer;
+			&:hover {
+				animation: sunAnimation 5s infinite;
+				@keyframes sunAnimation {
+					0% {
+						transform: scale(1);
+					}
+					50% {
+						transform: scale(1.5);
+					}
+					100% {
+						transform: scale(1);
+					}
 				}
 			}
 		}
+		.hover_sun {
+			transition: 0.5s color ease;
+			cursor: pointer;
+			&:hover {
+				animation: sunAnimation 5s infinite;
+				@keyframes sunAnimation {
+					0% {
+						transform: scale(1);
+					}
+					50% {
+						transform: scale(1.1);
+					}
+					100% {
+						transform: scale(1);
+					}
+				}
+			}
+		}
+		input {
+			opacity: 0;
+		}
 	}
-	input {
-		opacity: 0;
+	.detailpage_home{
+		background-color: aliceblue;
 	}
 }
