--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,8 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans;
+	/* width */
+	overflow-x: hidden;
 }
 
 * {
@@ -82,7 +84,7 @@ body {
 	right: 0;
 	bottom: 0;
 	// background: radial-gradient(#020311 0%, #000 100%);
-	background: transparent;
+	background: red;
 	display: flex;
 	justify-content: center;
 	align-items: center;
