--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -82,9 +82,9 @@ body {
 	top: 0;
 	left: 0;
 	right: 0;
-	bottom: 0;
+	// bottom: 0;
 	// background: radial-gradient(#020311 0%, #000 100%);
-	background: red;
+	background: rgb(0, 0, 0);
 	display: flex;
 	justify-content: center;
 	align-items: center;
