--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -950,8 +950,8 @@ body {
 
 // Size solar
 .size-solar-big {
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
 }
 .size-solar-xl {
 	width: 130px;
@@ -968,17 +968,20 @@ body {
 
 // position solar
 .position-solar-6 {
-	top: -30px;
+	top: -50px;
 }
 .position-solar-5 {
-	top: -20px;
+	top: -50px;
 }
 .position-solar-3 {
-	top: -15px;
+	top: -35px;
+}
+.position_zen {
+	top: -40px;
 }
 .position-solar-2 {
 	top: -40px;
 }
 .position-solar-1 {
-	top: -25px;
+	top: -45px;
 }
