--- a/components/solar/solar.module.scss
+++ b/components/solar/solar.module.scss
@@ -2,7 +2,9 @@
 	background-color: #000000;
 	color: white;
 	text-align: center;
-	height: 100vh;
+	// height: 100vh;
+	height: fit-content;
+	min-height: 100vh;
 	width: 100%;
 	max-width: 1920px;
 	margin: 0 auto;
