--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,24 +64,27 @@ img {
 	--perspective: 10000px;
 }
 #translateLeft:checked ~ .universe {
-	animation: universe-translateLeft 3.2s ease-in-out;
-	transform: translateX(-45%);
+	animation: universe-translateLeft 4s ease-in-out;
 }
 @keyframes universe-translateLeft {
 	0% {
 		transform: scale(0.8) translateX(0);
 		opacity: 1;
 	}
-	20% {
+	15% {
 		transform: scale(0.5);
 	}
-	90% {
+	65% {
 		opacity: 0.7;
 	}
 
-	100% {
+	75% {
 		transform: scale(1) translateX(-45%);
 		opacity: 0.1;
+	}
+	100% {
+		transform: scale(1) translateX(-45%);
+		opacity: 0;
 	}
 }
 .universe {
