--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,6 +42,8 @@ img {
 }
 #real-time:checked ~ .universe {
 	--speed-of-animation: 1;
+	background: transparent;
+	z-index: 10000;
 }
 #one-year-per-minute:checked ~ .universe {
 	--speed-of-animation: 518400;
