--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -1,5 +1,5 @@
 .unicornverse {
-	overflow-x: hidden !important;
+	overflow: hidden !important;
 	height: fit-content;
 	// background-color: black;
 	.home_aura {
