--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans;
 	/* width */
-	overflow-x: hidden;
+	// overflow-x: hidden;
 }
 
 * {
